--- a/package.json
+++ b/package.json
@@ -1,1 +1,56 @@
-/development/htmlEmail/package.json
+{
+  "name": "htmlEmail",
+  "description": "Express Application description",
+  "version": "0.0.1",
+  "private": true,
+  "author": {
+    "name": "Vrykolas",
+    "email": "vrykolas13@gmail.com"
+  },
+  "scripts": {
+    "test": "grunt test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/vrykolas/htmlEmail.git"
+  },
+  "main": "Gruntfile.js",
+  "engines": {
+    "node": ">= 0.8.0"
+  },
+  "dependencies": {
+    "express": "3.4.4",
+    "hjs": "*",
+    "less-middleware": "*",
+    "juice": "~0.4.0",
+    "html-minify": "~0.3.1",
+    "node-sass": "~0.7.0"
+  },
+  "devDependencies": {
+    "matchdep": "~0.1.2",
+    "grunt": "~0.4.1",
+    "grunt-regarde": "~0.1.1",
+    "grunt-contrib-connect": "~0.3.0",
+    "grunt-contrib-livereload": "~0.1.2",
+    "grunt-open": "~0.2.0",
+    "grunt-connect-proxy": "~0.1.4",
+    "grunt-exec": "~0.4.2",
+    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-contrib-compass": "~0.3.0",
+    "grunt-contrib-clean": "~0.4.1",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-uglify": "~0.2.2",
+    "grunt-express-server": "~0.4.0",
+    "grunt-contrib-cssmin": "~0.6.1",
+    "grunt-recess": "~0.4.0"
+  },
+  "peerDependencies": {
+    "grunt": "~0.4.1"
+  },
+  "keywords": [
+    "grunt",
+    "node.js",
+    "express"
+  ]
+}
